added to user schema steps, sleep , heart metrix and reminders and made services, controllers and routes for all that new data and updated swagger.json components schema and paths
